fixed player on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -766,4 +766,8 @@ color: #FAF9F6;
         padding-left: 0;
         padding-right: 0;
     }
+
+    .wrapper {
+        display: none;
+    }
 }
